[package]
name = "tcp_speeder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
toml = "0.8.23"
trust-dns-resolver = "0.22"
